--- a/src/main/res/layout/activity_estimate.xml
+++ b/src/main/res/layout/activity_estimate.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/buttonTahmin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EstimateActivity"
@@ -37,14 +38,26 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewKalanHak" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/editTextGirdi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="58dp"
         android:ems="10"
         android:hint="Sayı giriniz..."
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="293dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewYardim" />
+
+    <Button
+        android:id="@+id/buttonTahmin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="183dp"
+        android:text="Tahmin Et"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
