--- a/src/main/res/layout/activity_estimate.xml
+++ b/src/main/res/layout/activity_estimate.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/buttonTahmin"
+    android:id="@+id/buttonTahminnn"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EstimateActivity"
+    tools:ignore="DuplicateIds"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="-3dp">
 
@@ -52,12 +53,14 @@
 
     <Button
         android:id="@+id/buttonTahmin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="183dp"
-        android:text="Tahmin Et"
+        android:layout_width="173dp"
+        android:layout_height="69dp"
+        android:layout_marginBottom="150dp"
+        android:text="TAHMİN ET"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
