--- a/src/main/res/layout/activity_estimate.xml
+++ b/src/main/res/layout/activity_estimate.xml
@@ -5,6 +5,7 @@
     android:id="@+id/buttonTahminnn"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#6A206A"
     tools:context=".EstimateActivity"
     tools:ignore="DuplicateIds"
     tools:layout_editor_absoluteX="0dp"
@@ -16,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="91dp"
         android:text="Kalan Hak: 5"
-        android:textColor="#E91E63"
+        android:textColor="#D8559D"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
         android:text="Arttır"
-        android:textColor="#E91E63"
+        android:textColor="#D8559D"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,9 +41,10 @@
 
     <EditText
         android:id="@+id/editTextGirdi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="223dp"
+        android:layout_height="43dp"
         android:layout_marginTop="58dp"
+        android:background="#D8559D"
         android:ems="10"
         android:hint="Sayı giriniz..."
         android:inputType="text"
@@ -57,7 +59,10 @@
         android:layout_height="69dp"
         android:layout_marginBottom="150dp"
         android:text="TAHMİN ET"
+        android:textColor="#050505"
+        android:textColorHint="#D8559D"
         android:textSize="20sp"
+        app:backgroundTint="#D8559D"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
