--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/buttonKolay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E91E63"
+    android:background="#009688"
     tools:context=".MainActivity"
     tools:ignore="DuplicateIds">
 
@@ -28,10 +28,10 @@
         android:layout_height="70dp"
         android:layout_marginBottom="60dp"
         android:text="ZOR"
-        android:textColor="#070707"
+        android:textColor="#FFEB3B"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:backgroundTint="#AF3131"
+        app:backgroundTint="#28782B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -54,10 +54,10 @@
         android:layout_height="70dp"
         android:layout_marginBottom="25dp"
         android:text="ORTA"
-        android:textColor="#070707"
+        android:textColor="#FFEB3B"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:backgroundTint="#AF3131"
+        app:backgroundTint="#28782B"
         app:layout_constraintBottom_toTopOf="@+id/buttonZor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -68,10 +68,10 @@
         android:layout_width="190dp"
         android:layout_height="70dp"
         android:layout_marginBottom="33dp"
-        android:textColor="#070707"
+        android:textColor="#FFEB3B"
         android:text="KOLAY"
         android:textSize="18sp"
-        app:backgroundTint="#AF3131"
+        app:backgroundTint="#28782B"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/buttonOrta"
         app:layout_constraintEnd_toEndOf="parent"
